# ConnectAlso

./: .dockerignore  .gitignore  Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  fuzz.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/daemon/: Cargo.toml
apps/daemon/src/: dns.rs  main.rs
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
apps/mobile/: Cargo.toml
apps/mobile/src/: android.rs  engine.rs  ffi.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: key_exchange.rs  lib.rs
crates/nat/: Cargo.toml
crates/nat/fuzz/: Cargo.toml
crates/nat/fuzz/fuzz_targets/: fuzz_stun_parse.rs
crates/nat/src/: candidate.rs  detector.rs  lib.rs  nat_type.rs  punch.rs  stun.rs
crates/nat/tests/: nat_traversal.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs  tun.rs
crates/relay-proto/: Cargo.toml
crates/relay-proto/fuzz/: Cargo.toml
crates/relay-proto/fuzz/fuzz_targets/: fuzz_frame_decode.rs  fuzz_frame_roundtrip.rs
crates/relay-proto/src/: lib.rs
crates/tunnel/: Cargo.toml
crates/tunnel/src/: lib.rs  path.rs  relay.rs  relay_pool.rs
crates/tunnel/tests/: e2e_interop.rs
deploy/android/: ConnectAlsoVpnService.kt  README.md  RustBridge.kt
deploy/docker/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
deploy/ios/: PacketTunnelProvider.swift  README.md
deploy/launchd/: com.connectalso.daemon.plist
deploy/nat-test/: README.md  docker-compose.yml
deploy/nat-test/docker/: Dockerfile
deploy/nat-test/scripts/: gateway-a.sh  gateway-b.sh  gateway-fullcone.sh
deploy/packaging/: uninstall.sh
deploy/packaging/linux/: build.sh
deploy/packaging/macos/: build.sh
deploy/packaging/windows/: build.ps1
deploy/systemd/: connectalso-daemon.service
deploy/windows/: service-config.md
docs/decisions/: m0-6-data-plane-license.md  m0-7-threat-model.md  m4-1-security-audit.md
docs/guide/: deployment.md
docs/ops/: compatibility.md  operations.md  privacy.md  rollback.md  upgrade.md
services/control/: Cargo.toml
services/control/src/: db.rs  main.rs
services/relay/: Cargo.toml
services/relay/src/: main.rs
services/stun/: Cargo.toml
services/stun/src/: main.rs
