[workspace]
resolver = "2"
members = [
    "crates/*",
    "apps/*",
    "services/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/Lightalso/ConnectAlso"
authors = ["ConnectAlso Contributors"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite"] }
prost = "0.13"
bytes = "1"

connectalso-core = { path = "crates/core" }
connectalso-crypto = { path = "crates/crypto" }
connectalso-tunnel = { path = "crates/tunnel" }
connectalso-nat = { path = "crates/nat" }
connectalso-relay-proto = { path = "crates/relay-proto" }
connectalso-platform = { path = "crates/platform" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
