[package]
name = "connectalso-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "connectalso-desktop"
path = "src/main.rs"

[dependencies]
connectalso-core.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tray-icon.workspace = true
muda.workspace = true

[lints]
workspace = true
