[package]
name = "connectalso-mobile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "connectalso_mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
connectalso-core.workspace = true
connectalso-crypto.workspace = true
connectalso-tunnel.workspace = true
connectalso-nat.workspace = true
connectalso-relay-proto.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
