[package]
name = "connectalso-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
connectalso-core.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
