[package]
name = "connectalso-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
connectalso-core.workspace = true
tun2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

[lints]
workspace = true
