[package]
name = "connectalso-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "connectalso-relay"
path = "src/main.rs"

[dependencies]
connectalso-core.workspace = true
connectalso-relay-proto.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
