[package]
name = "nat-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.connectalso-nat]
path = ".."

[lib]
path = "fuzz_targets/dummy.rs"

[[bin]]
name = "fuzz_stun_parse"
path = "fuzz_targets/fuzz_stun_parse.rs"
test = false
doc = false
